# agent-debug-compass

./: .gitignore  CHANGELOG.md  COMMANDS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  deny.toml
benchmarks/: README.md
contracts/: README.md  adc.contract_coverage.v1.json
crates/adc/: Cargo.toml
crates/adc-core/: Cargo.toml
crates/adc-core/src/: artifact.rs  capture.rs  collectors.rs  compare.rs  contracts.rs  daemon.rs  discovery.rs  error.rs  event.rs  evidence.rs  fleet_semantics.rs  investigation_facts.rs  investigation_state.rs  kernel.rs  lib.rs  managed_fleet.rs  overhead.rs  probe_packs.rs  profile.rs  recorder.rs  route_compiler.rs  route_conditions.rs  route_packs.rs  service_investigation.rs  snapshot.rs  status.rs  symptom_context.rs  symptoms.rs  timeline.rs  trigger.rs
crates/adc-core/src/agent_context/: ids.rs  mod.rs  refs.rs  render.rs  staging.rs
crates/adc-core/src/fleet/: mod.rs  preflight_model.rs  transport.rs
crates/adc-core/src/recorder/: budget.rs  coverage.rs  freezer.rs  io.rs  logs.rs  loss.rs  marker.rs  mod.rs  model.rs  overhead.rs  quality.rs  refs.rs  resource.rs  ring.rs  status.rs  trigger_artifacts.rs  validation.rs
crates/adc-core/tests/: agent_context.rs  capture.rs  collectors.rs  discovery.rs  event.rs  evidence.rs  fleet.rs  investigation_contracts.rs  investigation_facts.rs  kernel.rs  managed_fleet.rs  manifest.rs  overhead.rs  profile.rs  recorder.rs  route_compiler.rs  route_conditions.rs  route_packs.rs  run_compare.rs  symptoms.rs  timeline.rs  trigger.rs
crates/adc-mcp/: Cargo.toml
crates/adc-mcp/src/: main.rs  server.rs
crates/adc-mcp/src/server/: managed.rs  prompts.rs  resources.rs  tools.rs
crates/adc-mcp/tests/: contract_outputs.rs  tool_list.rs
crates/adc-priv-helper/: Cargo.toml
crates/adc-priv-helper/src/: main.rs
crates/adc-priv-helper/tests/: allowlist.rs
crates/adc/src/: cli.rs  main.rs
crates/adc/src/cli/: args.rs  help.rs  recorder.rs
crates/adc/tests/: agent_context.rs  capabilities.rs  capture.rs  contract_outputs.rs  daemon_ops.rs  evidence.rs  fleet.rs  snapshot.rs  status.rs
docs/: 00_current_state.md  04_target_setup.md  05_security_checks.md  06_demo_guide.md  security.md
profiles/: demo_sensor_gateway.yaml  pi5_basic.yaml
schemas/: README.md  adc.contract_coverage.v1.schema.json  adc.investigation_trace.v1.schema.json  obs.agent_context.v1.schema.json  obs.artifact_trust.v1.schema.json  obs.capability_report.v1.schema.json  obs.data_quality.v1.schema.json  obs.dataset_manifest.v1.schema.json  obs.event_envelope.v1.schema.json  obs.evidence_graph.v1.schema.json  obs.evidence_index.v2.schema.json  (+30 more)
tests/: README.md
(+117 files in other folders)
