[workspace]
members = [
    "crates/adc-core",
    "crates/adc-mcp",
    "crates/adc",
    "crates/adc-priv-helper",
    "crates/adc-targetd",
    "crates/adc-workload",
    "crates/adc-demo-sensor-gateway",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/shunta-sato/agent-debug-compass"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = "1"
yaml_serde = "0.10.4"
tempfile = "3"
rmcp = { version = "1.4.0", features = ["transport-io"] }
rustls = { version = "0.23.35", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2.2.0"

[workspace.lints.rust]
unsafe_code = "forbid"
