[package]
name = "adc-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
yaml_serde.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
