[package]
name = "adc-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
adc-core = { path = "../adc-core", version = "0.1.0" }
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true

[lints]
workspace = true
