[package]
name = "adc-priv-helper"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
adc-core = { path = "../adc-core", version = "0.1.0" }
serde_json.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
